--- a/nginx.conf
+++ b/nginx.conf
@@ -7,6 +7,10 @@ server {
         try_files $uri $uri/ =404;
     }
 
+    real_ip_header    X-Forwarded-For;
+    set_real_ip_from  172.24.0.2;         # ← allow this proxy to tell Nginx the real IP
+    real_ip_recursive on;
+
     location /client-ip
     {
     # make the reply JSON and non-cacheable
